<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:orientation="horizontal"
    android:id="@+id/linearLayoutCustomViewMembers"
    android:padding="5dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="338dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/theNameofCompany"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/company_name"
            android:textAlignment="center"
            android:textColor="@color/colorPeace"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/thePhoneOfCompany"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/company_phone"
            android:textAlignment="center"
            android:textColor="@color/colorPeace"
            android:textSize="14sp" />
    </LinearLayout>
    <Button
        android:id="@+id/removeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/remove"
        android:textSize="13sp" />
</LinearLayout>
