<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@mipmap/ic_launcher_background"
    tools:context=".ContactServiceProvider">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_height="100dp"
            android:layout_width="200dp"
            android:src="@drawable/unnamed"
            android:id="@+id/imgAddMember"
            android:contentDescription="@string/kenyan_court_of_arms"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>


        <Spinner
            android:id="@+id/serviceCategorySelect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/select_service_type"
            android:textAlignment="viewEnd"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="20dp"
            android:descendantFocusability="blocksDescendants"

            />


        <EditText
            android:id="@+id/enterMessageSMS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textAlignment="center"
            android:hint="@string/enterMessageToSendHere"
            android:textColorHint="@color/colorPeace"
            android:inputType="textAutoCorrect"
            android:textColor="@color/colorPeace"
            android:maxLength="13"
            android:shadowColor="@color/colorPeace" />

        <Button
            android:id="@+id/sendMessageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/send_message"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorPeace"
            android:layout_gravity="center" />

    </LinearLayout>

</ScrollView>

