<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_splash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="#fa013e20"
    tools:context="com.kenya.nyumbakumi.SplashScreen">

    <TextView
        android:text="@string/nyumbakumi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/splashText"
        android:textColor="@color/colorAccent"
        android:fontFamily="casual"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:textSize="29sp"/>

    <ImageView
        android:layout_height="200dp"
        android:layout_width="200dp"
        app:srcCompat="@drawable/unnamed"
        android:id="@+id/imgSplash"
        android:layout_above="@id/meruUniText"
        android:contentDescription="@string/kenyan_court_of_arms"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="85dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/meru_county"
        android:id="@+id/meruUniText"
        android:textColor="@color/colorAccent"
        android:fontFamily="casual"
        android:textStyle="bold|normal"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:layout_above="@id/splashText"
        android:layout_alignParentStart="true"
        android:textSize="25sp"/>
</RelativeLayout>
