<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_launcher_background">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.kenya.nyumbakumi.MainActivity">

        <ImageView
            android:layout_height="100dp"
            android:layout_width="200dp"
            android:src="@drawable/unnamed"
            android:id="@+id/imgLogin"
            android:contentDescription="@string/kenyan_court_of_arms"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/colorPeace"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:fontFamily="casual"
            android:layout_marginTop="40dp" />

        <EditText
            android:id="@+id/edTextLoginPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/phone_number"
            android:textColorHint="@color/colorPeace"
            android:inputType="phone"
            android:textAlignment="center"
            android:textColor="@color/colorPeace"
            android:maxLength="13"
            android:shadowColor="@color/colorPeace" />

        <EditText
            android:id="@+id/edTextIdno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/id_number"
            android:textAlignment="center"
            android:textColorHint="@color/colorPeace"
            android:textColor="@color/colorPeace"
            android:inputType="numberPassword"
            android:maxLength="10"
            android:shadowColor="@color/colorPeace"/>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/login"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorPeace"
            android:layout_gravity="center" />

    </LinearLayout>

</ScrollView>
